--- a/jemdoc.css
+++ b/jemdoc.css
@@ -56,7 +56,7 @@ pre, tt {
 }
 
 a, a > tt {
-	color: #224b8d;
+	color: #0502b5; /* #224b8d; */
 	text-decoration: none;
 }
 
@@ -65,11 +65,11 @@ a:hover {
 }
 
 #layout-menu a.current:link, #layout-menu a.current:visited {
-	color: #022b6d;
+	color: #0502b5; /* #022b6d; */
 	border-bottom: 1px gray solid;
 }
 #layout-menu a:link, #layout-menu a:visited, #layout-menu a:hover {
-	color: #527bbd;
+	color: #021dc9; /* #527bbd; */
 	text-decoration: none;
 }
 #layout-menu a:hover {
@@ -117,7 +117,7 @@ strong {
 
 
 h1, h2, h3 {
-	color: #527bbd;
+	color: #2004c2; /* #4405b0; */  /* #527bbd; */
 	margin-top: 0.7em;
 	margin-bottom: 0.3em;
 	padding-bottom: 0.2em;
