--- a/jemdoc.css
+++ b/jemdoc.css
@@ -117,7 +117,7 @@ strong {
 
 
 h1, h2, h3 {
-	color: #2004c2; /* #4405b0; */  /* #527bbd; */
+	color: #081e8a; /*#2004c2;  #4405b0; #527bbd; */
 	margin-top: 0.7em;
 	margin-bottom: 0.3em;
 	padding-bottom: 0.2em;
